rust/kcl-lib/src/tooling/sketch_visualizer/snapshots/kcl_lib__tooling__sketch_visualizer__tests__sketch_visualizer_dof_data.snap
---
source: kcl-lib/src/tooling/sketch_visualizer/tests.rs
---
{
  "sketch": {
    "id": 0,
    "name": "sketch001"
  },
  "bounds": {
    "min": {
      "x": -23.997039179559856,
      "y": -30.0
    },
    "max": {
      "x": 46.0,
      "y": 26.0
    }
  },
  "units": [
    "None"
  ],
  "colorScheme": "dof",
  "constraintStatus": {
    "name": "sketch001",
    "status": "OverConstrained",
    "free_count": 5,
    "conflict_count": 1,
    "total_count": 7
  },
  "dof": {
    "default": "Free",
    "points": {
      "fixed": [
        6,
        8,
        9
      ],
      "conflict": [
        5
      ]
    },
    "segments": {
      "fixed": [
        10
      ],
      "conflict": [
        7
      ]
    }
  },
  "points": [
    {
      "id": 1,
      "position": {
        "x": 0.0,
        "y": 0.0
      },
      "owner": 3,
      "contactGroup": 0,
      "coincidentGroup": null
    },
    {
      "id": 2,
      "position": {
        "x": 36.0,
        "y": 0.0
      },
      "owner": 3,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 4,
      "position": {
        "x": 0.0,
        "y": 24.0
      },
      "owner": 7,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 5,
      "position": {
        "x": 24.0,
        "y": 0.0
      },
      "owner": 7,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 6,
      "position": {
        "x": 0.0,
        "y": 0.0
      },
      "owner": 7,
      "contactGroup": 0,
      "coincidentGroup": null
    },
    {
      "id": 8,
      "position": {
        "x": 46.0,
        "y": 16.0
      },
      "owner": 10,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 9,
      "position": {
        "x": 36.0,
        "y": 16.0
      },
      "owner": 10,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 11,
      "position": {
        "x": 4.0,
        "y": -28.0
      },
      "owner": 15,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 12,
      "position": {
        "x": 16.0,
        "y": -8.0
      },
      "owner": 15,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 13,
      "position": {
        "x": 28.0,
        "y": -30.0
      },
      "owner": 15,
      "contactGroup": null,
      "coincidentGroup": null
    },
    {
      "id": 14,
      "position": {
        "x": 44.0,
        "y": -10.0
      },
      "owner": 15,
      "contactGroup": null,
      "coincidentGroup": null
    }
  ],
  "segments": [
    {
      "id": 3,
      "kind": "line",
      "pointIds": [
        1,
        2
      ],
      "endpointIds": [
        1,
        2
      ],
      "construction": false,
      "componentId": 0,
      "renderedColor": "#3c73ff"
    },
    {
      "id": 7,
      "kind": "arc",
      "pointIds": [
        4,
        5,
        6
      ],
      "endpointIds": [
        4,
        5
      ],
      "construction": false,
      "componentId": 1,
      "renderedColor": "#ff5e5b"
    },
    {
      "id": 10,
      "kind": "circle",
      "pointIds": [
        8,
        9
      ],
      "endpointIds": [],
      "construction": false,
      "componentId": 2,
      "renderedColor": "#ffffff"
    },
    {
      "id": 15,
      "kind": "control_point_spline",
      "pointIds": [
        11,
        12,
        13,
        14
      ],
      "endpointIds": [
        11,
        14
      ],
      "construction": false,
      "componentId": 3,
      "renderedColor": "#3c73ff"
    }
  ],
  "constraints": [],
  "idColorMap": {
    "3": "#eb599b",
    "7": "#d94e9a",
    "10": "#4f6ed1",
    "15": "#6ded32"
  },
  "contactGroups": [
    {
      "id": 0,
      "pointIds": [
        1,
        6
      ]
    }
  ],
  "coincidentGroups": [],
  "connectedComponents": [
    {
      "id": 0,
      "segmentIds": [
        3
      ]
    },
    {
      "id": 1,
      "segmentIds": [
        7
      ]
    },
    {
      "id": 2,
      "segmentIds": [
        10
      ]
    },
    {
      "id": 3,
      "segmentIds": [
        15
      ]
    }
  ],
  "openEndpoints": [
    1,
    2,
    4,
    5,
    11,
    14
  ],
  "closednessHints": [
    {
      "componentId": 0,
      "isClosed": false,
      "openEndpointIds": [
        1,
        2
      ]
    },
    {
      "componentId": 1,
      "isClosed": false,
      "openEndpointIds": [
        4,
        5
      ]
    },
    {
      "componentId": 2,
      "isClosed": true,
      "openEndpointIds": []
    },
    {
      "componentId": 3,
      "isClosed": false,
      "openEndpointIds": [
        11,
        14
      ]
    }
  ],
  "warnings": []
}
